# Classification_CNN_2D

./: .gitignore  README.md  Solar_Panel_Classification.ipynb  main.py  pyproject.toml  requirements.txt
asset/: note.md
kt_dir/efficientnet_tune/: oracle.json
kt_dir/efficientnet_tune/trial_00/: trial.json
kt_dir/efficientnet_tune/trial_01/: trial.json
kt_dir/efficientnet_tune/trial_02/: trial.json
kt_dir/efficientnet_tune/trial_03/: trial.json
kt_dir/efficientnet_tune/trial_04/: trial.json
kt_dir/efficientnet_tune/trial_05/: trial.json
kt_dir/efficientnet_tune/trial_06/: trial.json
kt_dir/efficientnet_tune/trial_07/: trial.json
kt_dir/efficientnet_tune/trial_08/: trial.json
kt_dir/efficientnet_tune/trial_09/: trial.json
kt_dir/efficientnet_tune/trial_10/: trial.json
kt_dir/efficientnet_tune/trial_11/: trial.json
kt_dir/efficientnet_tune/trial_12/: trial.json
kt_dir/efficientnet_tune/trial_13/: trial.json
kt_dir/efficientnet_tune/trial_14/: trial.json
