[project]
name = "classification-cnn-2d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "keras-tuner>=1.4.8",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "streamlit>=1.52.1",
    "tensorflow>=2.20.0",
]
